prototyping better heap setting, updated perf test dependency to future release (less verbose)